# thewell

./: .gitignore  CANARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  data_correction.yml  extractor_bug.yml  jurisdiction_request.yml
.github/workflows/: canary.yml  deploy.yml  scrape-weekly.yml  test.yml
data/: README.md
data/judges/casd/: example-judge.yaml
data/schema/: fields.yaml  judge.schema.json
docs/: anonymity.md  auth.md  governance.md  methodology.md  schema.md  threat-model.md
scrapers/: README.md  pyproject.toml
scrapers/casd/: README.md  __init__.py  __main__.py  cli.py  scrape.py
scrapers/common/: __init__.py  audit.py  cache.py  extractors.py  http.py  models.py  normalize.py  pdf.py
scrapers/tests/: test_casd_integration.py  test_extractors.py  test_schema_compat.py
scrapers/tests/fixtures/casd/: bashant_standing_order_civil.txt  judge_detail_battaglia_excerpt.html  judges_index_excerpt.html  robots.txt
scrapers/tests/fixtures/extractor_samples/: chambers_procedural.txt  courtesy_copies_none.txt  courtesy_copies_on_request.txt  email_only.txt  junior_attorney_encouraged.txt  motion_page_limits.txt  msj_negative.txt  msj_page_limit_positive.txt  msj_page_limit_variant.txt  oral_argument_heard.txt  oral_argument_submitted.txt  telephonic_emergency.txt  telephonic_permitted.txt
scripts/: README.md  lint-judge-yaml.py  pyproject.toml
site/: README.md  astro.config.mjs  package.json
(+14 files in other folders)
